--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,13 +21,6 @@ label.block.w-full {
   font-size: 1.1rem;
 }
 
-.error {
-  color: rgb(248, 0, 0);
-  font-style:italic;
-  margin-bottom: 0.6rem;
-  margin-top: 0.1rem;
-}
-
 input.block.w-full {
   background-color: #fff;
   border: 1px solid #ececec;
@@ -58,6 +51,6 @@ textarea:focus {
   color: #a3a3a3;
 }
 
-.card {
-  width: 100%;
+.message:hover {
+  cursor: pointer;
 }
